--- a/cost_styles.css
+++ b/cost_styles.css
@@ -1,17 +1,34 @@
-div {
+form {
     font-family: 'Times New Roman', Times, serif;
 }
 
 section {
     font-size: 20px;
     font-weight: bold;
+    padding-top: 15px;
+    padding-bottom: 8px;
+    
 }
 
-button {
+#update_daily_costs {
     color:darkred;
     font-size: 15px;
     font-weight: bold;
+    padding: 6px;
+}
+
+#update_limits {
+    color: lightcoral;
+    font-size: 15px;
+    font-weight: bold;
+    padding: 6px;
 }
 input {
     font-size: 14px;
+    padding: 5px;
+}
+header {
+    font-size: 30px;
+    background-color: lightgreen;
+    padding: 10px;
 }
